# R-type

./: .gitignore  CMakeLists.txt  README.md  rfc_rtype.txt
includes/logger/: Logger.hpp
includes/network/: Addr.hpp  Socket.hpp
includes/server/: Game.hpp  Protocol.hpp  Server.hpp
log/: logger.conf
repos/imgui/: imconfig.h  imgui.cpp
sources/: main.cpp
sources/engine/: Engine.cpp  Engine.hpp  EngineStatus.hpp  EngineStop.cpp  EngineStop.hpp  ForwardDeclaration.hpp  Manager.hpp  Runner.hpp
sources/engine/display/: Texture.hpp  Window.hpp
sources/engine/entity/: Collision.cpp  Collision.hpp  Entity.cpp  Entity.hpp  MovableEntity.cpp  MovableEntity.hpp
sources/engine/scope/: Scope.cpp  Scope.hpp
sources/engine/service/: GameService.cpp  GameService.hpp  GraphicalService.cpp  GraphicalService.hpp  NetService.cpp  NetService.hpp  Service.hpp
sources/entities/: Asteroid.cpp  Asteroid.hpp  BaseEntity.hpp  PlayerShip.cpp  PlayerShip.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp
sources/entities/Projectiles/: Projectile.cpp
sources/entities/Projectiles/sub/: SinusProjectile.cpp
sources/entities/asteroids/: Asteroid.cpp  Asteroid.hpp  BigAsteroid.hpp  MedAsteroid.hpp  SmallAsteroid.hpp  TinyAsteroid.hpp
sources/entities/powerups/: APowerUp.cpp  APowerUp.hpp  grade.hpp
sources/entities/powerups/sub/: DamagePowerUp.hpp  HealPowerUp.hpp  ShieldPowerUp.hpp  SpeedPowerUp.hpp
sources/entities/projectiles/: Projectile.cpp  Projectile.hpp
sources/entities/projectiles/sub/: SinusProjectile.hpp
sources/entities/ships/: Arc.hpp  Intercepteur.hpp  PlayerShip.cpp  PlayerShip.hpp  Ship.cpp  Ship.hpp  XWing.hpp  YWing.hpp  _Wing.hpp
sources/entities/ships/Boss/: LeftPart.hpp  MiddlePart.hpp  RightPart.hpp
sources/entities/ships/sub/: Arc.hpp  Enemy1.hpp  Enemy2.hpp  Enemy3.hpp  Enemy4.hpp  Enemy5.hpp  Interceptor.hpp  TieAdvance.hpp  TieAvenger.hpp  TieBomber.hpp  TieExperiment.hpp  TieFigther.hpp  XWing.hpp  YWing.hpp  _Wing.hpp
sources/entities/starfield/: star.cpp  star.hpp
sources/entities/weapons/: AWeapon.hpp  IWeapon.hpp  Laser1.hpp  Laser2.hpp  Weapon.cpp  Weapon.hpp
sources/entities/weapons/sub/: Laser1.hpp  Laser2.hpp  Laser3.hpp  Laser4.cpp  Laser4.hpp
sources/logger/: Logger.cpp
sources/network/: Addr.cpp  Socket.cpp
sources/scopes/: BaseScope.cpp  BaseScope.hpp  EmptyScope.hpp  EndGame.hpp  Level1Scope.hpp  Level2Scope.hpp  Level3Scope.hpp  LoginScope.hpp  MenuScope.hpp  ShipChoiceScope.cpp  ShipChoiceScope.hpp  TestScope.hpp
sources/server/: main.cpp
sources/server/includes/: Game.hpp  Protocol.hpp  Server.hpp
sources/server/sources/: Game.cpp  Server.cpp
sources/services/: BaseService.cpp  BaseService.hpp  GameService.cpp  GameService.hpp  GraphicalService.cpp  GraphicalService.hpp  TestService.hpp
